tests/error/ptr_assign_const.gw
1 :=> <~int~>Ptr pd;
